pagraph alignment fixed

--- a/Styles.css
+++ b/Styles.css
@@ -8,20 +8,39 @@ body {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
-.wrapper {
-  height: inherit;
-}
 .logo {
   margin-top: 54px;
-
   display: flex;
   justify-content: center;
 }
 .container {
-  height: 100vh;
-  margin-inline: auto;
-  max-width: 720px;
-  padding: 30px;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 280px;
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
 }
 h1 {
   color: #0c7f40;
@@ -36,11 +55,13 @@ h1 {
   margin-bottom: 3px;
 }
 .paragraph {
-  padding: 12px;
+  margin-bottom: 42px;
+  max-width: 600px;
+  margin-inline: auto;
 }
 p {
   font-size: 14px;
-  text-align: justify;
+  text-align: center;
   margin-bottom: 42px;
 }
 .form_sections {
@@ -59,6 +80,16 @@ select {
   font-size: 14px;
   font-weight: 400px;
   line-height: 22px;
+}
+option:checked,
+option:hover {
+  background-color: #ececec;
+}
+
+@media (min-width: 768px) {
+  .label {
+    min-width: 438px;
+  }
 }
 ::placeholder {
   color: #c8c8c8;
@@ -109,12 +140,14 @@ tr {
   background: white;
   font-weight: 700;
 }
-@media (min-width: 700px) {
+@media (min-width: 768px) {
   .form_sections {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    gap: 45px;
+    align-items: center;
+    /* gap: 45px; */
   }
   .form_buttons {
     display: flex;
@@ -132,3 +165,92 @@ tr {
     min-width: 410px;
   }
 }
+/* .wrapper {
+  width: 100%;
+  height: 100vh;
+}
+.container {
+  height: 100vh;
+  max-width: 1140px;
+  margin-inline: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  color: #0c7f40;
+  font-weight: 700;
+
+  text-align: center;
+  font-size: 35px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 60px;
+  text-transform: capitalize;
+}
+.paragraph {
+  margin-bottom: 42px;
+  padding-inline: 250px;
+}
+
+.form_sections {
+  display: flex;
+  justify-content: space-around;
+  gap: 56px;
+  margin-bottom: 18px;
+}
+label {
+  text-align: left;
+}
+.label {
+  display: flex;
+  flex-direction: column;
+}
+input,
+select {
+  /* max-width: 410px; */
+/*
+  height: 48px;
+  text-indent: 17px;
+  font-size: 14px;
+  font-weight: 400px;
+  line-height: 22px;
+}
+::placeholder {
+  color: #c8c8c8;
+  opacity: 1;
+}
+select {
+  color: #c8c8c8;
+}
+button {
+  min-width: 147px;
+  height: 48px;
+  border: none;
+  color: white;
+  font-family: inherit;
+}
+.form_buttons {
+  display: flex;
+  gap: 17px;
+  justify-content: center;
+  margin-top: 68px;
+}
+.btn_Cancel {
+  background-color: #cb2500;
+}
+.btn_Submit {
+  background-color: #0c7f40;
+}
+@media (max-width: 600px) {
+  .form {
+    margin-inline: auto;
+  }
+  .form_sections {
+    display: block;
+  }
+} */
